@@ -1,5 +1,7 @@
 version 1.0.6 (not yet released)
 --------------------------------
+* add 'wmsimage' method for displaying background image retrieved from
+  a web map server (requires using 'epsg' keyword to define projection).
 * add 'epsg' keyword for defining projections.
 * add 'ellps' keyword (rsphere ignored if ellps given).
 * fixed shiftdata method so it shifts mask along with data
